fix: minimal fixes for .index styling
This removes a bug where entries would overlap their label.

It deletes a defunct .indexIndex rule that did nothing even when
enabled.

It removes the `-moz-` prefix on the two column code, which is long
unsupported, even in Firefox.

--- a/xml2rfc/data/xml2rfc.css
+++ b/xml2rfc/data/xml2rfc.css
@@ -420,25 +420,18 @@ nav.toc li {
 }
 .index li {
   margin: 0;
-  text-indent: -2em;
   padding-left: 2em;
   padding-bottom: 5px;
-}
-.indexIndex {
-  margin: 0.5em 0 1em;
-}
-.index a {
-  font-weight: 700;
 }
 /* make the index two-column on all but the smallest screens */
 @media (min-width: 600px) {
   .index ul {
-    -moz-column-count: 2;
-    -moz-column-gap: 20px;
+    column-count: 2;
+    column-gap: 20px;
   }
   .index ul ul {
-    -moz-column-count: 1;
-    -moz-column-gap: 0;
+    column-count: 1;
+    column-gap: 0;
   }
 }
 
